--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section class="hero section">
         <div class="container">
           <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="order-button">Замовити послугу</button>
+          <button type="button" class="order-button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <section class="advantage section">
@@ -113,12 +113,15 @@
           <ul class="list">
             <li class="item">
               <img src="./images/work1.jpg" width="370" alt="Проектування" />
+              <p class="desc">Десктопні додатки</p>
             </li>
             <li class="item">
               <img src="./images/work2.jpg" width="370" alt="Адаптація" />
+              <p class="desc">Мобільні додатки</p>
             </li>
             <li class="item">
               <img src="./images/work3.jpg" width="370" alt="Дізайн" />
+              <p class="desc">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -444,6 +447,16 @@
           </div>
         </div>
       </footer>
+      <div class="backdrop is-hidden" data-modal>
+        <div class="order-window">
+          <button class="button-close" type="button" data-modal-close>
+            <svg class="icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-close-black"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </main>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
