--- a/portfolio.html
+++ b/portfolio.html
@@ -69,12 +69,19 @@
           <ul class="work-list list">
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-1.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-1.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Технокряк</h2>
                   <p class="card-description">Веб-сайт</p>
@@ -83,12 +90,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-2.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-2.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
                   <p class="card-description">Дизайн</p>
@@ -97,12 +111,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-3.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-3.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Ресторан Seafood</h2>
                   <p class="card-description">Додаток</p>
@@ -111,12 +132,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-4.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-4.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Проєкт Prime</h2>
                   <p class="card-description">Маркетинг</p>
@@ -125,12 +153,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-5.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-5.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Проєкт Boxes</h2>
                   <p class="card-description">Додаток</p>
@@ -139,12 +174,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-6.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-6.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Inspiration has no Borders</h2>
                   <p class="card-description">Веб-сайт</p>
@@ -153,12 +195,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-7.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-7.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Видання Limited Edition</h2>
                   <p class="card-description">Дизайн</p>
@@ -167,12 +216,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-8.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-8.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Проєкт LAB</h2>
                   <p class="card-description">Маркетинг</p>
@@ -181,12 +237,19 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="card-image"
-                  src="./images/portfolio/img-9.jpg"
-                  alt="Приклад роботи"
-                  width="370"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="card-image"
+                    src="./images/portfolio/img-9.jpg"
+                    alt="Приклад роботи"
+                    width="370"
+                  />
+                  <p class="overlay">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="desc-wrapper">
                   <h2 class="card-title">Growing Business</h2>
                   <p class="card-description">Додаток</p>
