--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </div>
       </footer>
       <div class="backdrop is-hidden" data-modal>
-        <div class="order-window">
+        <div class="order-window centered">
           <button class="button-close" type="button" data-modal-close>
             <svg class="icon" width="18" height="18">
               <use href="./images/icons.svg#icon-close-black"></use>
